# clw

./: .gitignore  Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt  style.tcss  weather.py  yoyo.py
src/clw/: __about__.py  __main__.py  app.py  iconset.py  weather.py
