[project]
name = "clw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.6",
    "aiohttp==3.11.12",
    "aiosignal==1.3.2",
    "astral==3.2",
    "attrs==25.1.0",
    "certifi==2025.1.31",
    "chafa-py>=1.2.0",
    "charset-normalizer==3.4.1",
    "frozenlist==1.5.0",
    "idna==3.10",
    "imgcat>=0.6.0",
    "multidict==6.1.0",
    "propcache==0.2.1",
    "python-weather==2.0.7",
    "requests==2.32.3",
    "ruff>=0.9.6",
    "term-image>=0.7.2",
    "textual>=1.0.0",
    "textual-dev>=1.7.0",
    "textual-image>=0.7.0",
    "urllib3==2.3.0",
    "yarl==1.18.3",
]
